# RaspberryPI-Weather

./: CMakeLists.txt  README.md  Weather.cpp
config/: clash.service.txt
doc/: Other-Windows下交叉编译ARM64架构的zlib库.md  STEP-1 开发前的准备工作.md  STEP-2 交叉编译环境配置.md  STEP-3 项目分析.md
test/: test.cpp
